Add multihop to select location and create search location

--- a/android/lib/resource/src/main/res/values/strings.xml
+++ b/android/lib/resource/src/main/res/values/strings.xml
@@ -400,4 +400,11 @@
     <string name="multihop">Multihop</string>
     <string name="multihop_description">Multihop routes your traffic into one WireGuard server and out another, making it harder to trace. This results in increased latency but increases anonymity online.</string>
     <string name="x_via_x">%s via %s</string>
+    <string name="entry">Entry</string>
+    <string name="exit">Exit</string>
+    <string name="clear_input">Clear input</string>
+    <string name="x_entry">%s (Entry)</string>
+    <string name="x_exit">%s (Exit)</string>
+    <string name="search_results">Search results</string>
+    <string name="filters">Filters</string>
 </resources>
