--- a/android/lib/resource/src/main/res/values-pt/strings.xml
+++ b/android/lib/resource/src/main/res/values-pt/strings.xml
@@ -43,12 +43,12 @@
     <string name="auto_connect">Ligação automática</string>
     <string name="auto_connect_and_lockdown_mode">Ligação automática e modo de bloqueio</string>
     <string name="auto_connect_and_lockdown_mode_footer">Assegura que o dispositivo está sempre no túnel VPN.</string>
-    <string name="auto_connect_carousel_first_slide_bottom_text">1. Depois de clicar no botão &lt;b&gt;Ir para as definições de VPN&lt;/b&gt; abaixo, clique na roda dentada junto ao nome da &lt;b&gt;Mullvad VPN&lt;/b&gt;.</string>
+    <string name="auto_connect_carousel_first_slide_bottom_text">1. Após clicar no botão &lt;b&gt;Ir para as definições de VPN&lt;/b&gt; abaixo, clique na roda dentada junto ao nome da &lt;b&gt;Mullvad VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_first_slide_top_text">As definições da ligação automática e do modo de bloqueio podem ser encontradas nas definições do sistema Android. Siga este guia para ativar uma ou ambas as funcionalidades.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Para ativar a ligação automática, clique no botão de alternar junto a &lt;b&gt;VPN sempre ligada&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">A ligação automática é designada por VPN sempre ligada nas definições do sistema Android e assegura que está constantemente ligado ao túnel VPN e ligar-se-á automaticamente após o reinício.</string>
     <string name="auto_connect_carousel_third_slide_bottom_text">3. Para ativar o modo de bloqueio, clique no botão de alternar junto a &lt;b&gt;Bloquear ligações sem VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Aviso: esta definição bloqueia as aplicações divididas e a funcionalidade de partilha de rede local.&lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">O modo de bloqueio é chamado &lt;b&gt;Bloquear ligações sem VPN&lt;/b&gt; nas definições do sistema Android. Ajuda a minimizar fugas, mas tem algumas limitações conhecidas sobre as quais pode ler mais</string>
+    <string name="auto_connect_carousel_third_slide_top_text">O modo de bloqueio é designado por &lt;b&gt;Bloquear ligações sem VPN&lt;/b&gt; nas definições do sistema Android. Ajuda a minimizar fugas, mas tem algumas limitações conhecidas sobre as quais pode ler mais</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">aqui</string>
     <string name="auto_connect_footer_legacy">Alternativamente, utilize a definição de sistema &lt;b&gt;Sempre ligada&lt;/b&gt;, seguindo o guia em &lt;b&gt;%1$s&lt;/b&gt; acima.</string>
     <string name="auto_connect_footer_legacy_tv">Ligar automaticamente quando a aplicação é iniciada. Esta definição será substituída por uma nova funcionalidade de ligação no arranque do dispositivo numa futura atualização.</string>
@@ -74,7 +74,7 @@
     <string name="confirm_removal">Sim, desligar o dispositivo</string>
     <string name="congrats">Parabéns!</string>
     <string name="connect">Tornar a minha ligação segura</string>
-    <string name="connected_using_daita">%1$s a usar %2$s</string>
+    <string name="connected_using_daita">%1$s a utilizar %2$s</string>
     <string name="connecting">A ligar</string>
     <string name="connecting_to_daemon">A ligar-se ao serviço de sistema Mulvad...</string>
     <string name="continue_login">Continuar com a ligação</string>
@@ -84,6 +84,7 @@
     <string name="copy_account_number">Copiar número de conta</string>
     <string name="create">Criar</string>
     <string name="create_account">Criar conta</string>
+    <string name="create_custom_list_message">\"%1$s\" foi criada</string>
     <string name="create_new_list">Criar nova lista</string>
     <string name="created_x">Criado: %1$s</string>
     <string name="creating_new_account">A criar conta...</string>
@@ -102,6 +103,8 @@
     <string name="custom_port_dialog_valid_ranges">Intervalos válidos: %1$s</string>
     <string name="custom_tunnel_host_resolution_error">Não foi possível resolver o anfitrião do túnel personalizado. Experimente alterar as suas definições.</string>
     <string name="daita_info">%1$s (%2$s) oculta padrões no seu tráfego VPN encriptado. Se alguém estiver a monitorizar a sua ligação, isto dificulta significativamente a identificação dos sites que visita. Para tal, adiciona cuidadosamente ruído de rede e torna todos os pacotes de rede do mesmo tamanho.</string>
+    <string name="daita_relay_subset_warning">Esta funcionalidade não está disponível em todos os servidores. Poderá ser necessário alterar a localização após a ativação.</string>
+    <string name="daita_warning">Atenção: visto que isto aumenta o tráfego total da sua rede, tenha cuidado se tiver um plano de dados limitado. Também pode afetar negativamente a velocidade da rede e a utilização da bateria.</string>
     <string name="delete">Eliminar</string>
     <string name="delete_custom_list_confirmation_description">Eliminar \"%1$s\"?</string>
     <string name="delete_custom_list_message">\"%1$s\" foi eliminada</string>
@@ -120,7 +123,7 @@
     <string name="disconnect">Desligar</string>
     <string name="disconnecting">A desligar</string>
     <string name="dismiss">Dispensar</string>
-    <string name="dns_content_blockers_custom_dns_warning">Atenção: esta definição não pode ser usada em combinação com &lt;b&gt;Usar servidor DNS personalizado&lt;/b&gt;.</string>
+    <string name="dns_content_blockers_custom_dns_warning">Atenção: esta definição não pode ser utilizada em combinação com &lt;b&gt;Usar servidor DNS personalizado&lt;/b&gt;.</string>
     <string name="dns_content_blockers_info">Quando esta funcionalidade é ativada, impede que o dispositivo contacte certos domínios ou sites conhecidos por distribuir anúncios, malware, trackers e muito mais.</string>
     <string name="dns_content_blockers_subtitle">Desative &lt;b&gt;%1$s&lt;/b&gt; abaixo para ativar estas definições.</string>
     <string name="dns_content_blockers_title">Bloqueadores de conteúdo de DNS</string>
@@ -182,6 +185,7 @@
     <string name="local_network_sharing_info">Esta funcionalidade permite o acesso a outros dispositivos na rede local, por exemplo, para partilha, impressão, streaming, etc.</string>
     <string name="location_added">%1$s (adicionado)</string>
     <string name="location_was_added_to_list">%1$s foi adicionado a \"%2$s\"</string>
+    <string name="location_was_removed_from_list">%1$s foi removida de \"%2$s\"</string>
     <string name="locations">Localizações</string>
     <string name="locations_were_changed_for">As localizações foram alteradas para \"%1$s\"</string>
     <string name="log_out">Terminar sessão</string>
@@ -257,6 +261,7 @@
     <string name="redeem">Reclamar</string>
     <string name="redeem_voucher">Reclamar voucher</string>
     <string name="remove_button">Remover</string>
+    <string name="remove_location_from_list">Remover %1$s de %2$s</string>
     <string name="rented">Alugado</string>
     <string name="rented_only">Apenas alugado</string>
     <string name="report_a_problem">Reportar um problema</string>
@@ -264,8 +269,8 @@
     <string name="save">Guardar</string>
     <string name="search_placeholder">Pesquisar por...</string>
     <string name="secure_connection">LIGAÇÃO SEGURA</string>
-    <string name="secured">Seguro</string>
-    <string name="select_location">Selecionar local</string>
+    <string name="secured">Segura</string>
+    <string name="select_location">Selecionar localização</string>
     <string name="select_location_description">Enquanto estiver ligado, a sua localização real será mascarada com uma localização privada e segura na região selecionada.</string>
     <string name="select_location_empty_text_first_row">Sem resultados para &lt;b&gt;%1$s&lt;/b&gt;.</string>
     <string name="select_location_empty_text_second_row">Experimente uma pesquisa diferente.</string>
@@ -308,6 +313,7 @@
     <string name="show_account_number">Mostrar número de conta</string>
     <string name="show_system_apps">Mostrar aplicações do sistema</string>
     <string name="split_tunneling_description">Permite-lhe selecionar aplicações que devem aceder diretamente à Internet sem passar pelo túnel VPN.</string>
+    <string name="split_tunneling_description_warning">Atenção: se a opção \"Bloquear ligações sem VPN\" estiver ativada, as aplicações divididas não terão Internet. Tenha sempre em mente que o túnel dividido representa um risco para a privacidade.</string>
     <string name="start_tunnel_error">Não foi possível iniciar a ligação de túnel. Envie um relatório do problema.</string>
     <string name="submit_button">Enviar</string>
     <string name="switch_location">Alterar local</string>
@@ -329,9 +335,9 @@
     <string name="udp_over_tcp_port_info">A que porta TCP o protocolo de ofuscação UDP sobre TCP deve ligar-se no servidor VPN.</string>
     <string name="udp_over_tcp_port_title">Porta UDP sobre TCP</string>
     <string name="undo">Anular</string>
-    <string name="unsecured">Inseguro</string>
+    <string name="unsecured">Insegura</string>
     <string name="unsecured_connection">LIGAÇÃO INSEGURA</string>
-    <string name="unsecured_vpn_permission_error">Inseguro (sem permissão de VPN)</string>
+    <string name="unsecured_vpn_permission_error">Insegura (sem permissão de VPN)</string>
     <string name="unsupported_version">VERSÃO NÃO SUPORTADA</string>
     <string name="unsupported_version_description">A sua privacidade pode estar comprometida com uma versão não suportada da aplicação. Por favor efetue a atualização agora.</string>
     <string name="unsupported_version_without_upgrade">Está a executar uma versão da aplicação não suportada.</string>
@@ -347,6 +353,7 @@
     <string name="view_logs">Ver os registos da app</string>
     <string name="virtual_adapter_problem">Erro de adaptador virtual</string>
     <string name="voucher_already_used">O código do voucher já foi utilizado.</string>
+    <string name="voucher_is_account_number">Parece que introduziu um número de conta em vez de um código de voucher. Se pretender alterar a conta ativa, termine a sessão primeiro.</string>
     <string name="voucher_success_title">O voucher foi reclamado com sucesso.</string>
     <string name="vpn_permission_denied_error">A transmissão foi negada durante a criação do túnel. Tente fazer novamente a ligação.</string>
     <string name="vpn_permission_error_notification_message">A VPN sempre ligada pode estar ativada para outra app</string>
