--- a/android/lib/resource/src/main/res/values-ja/strings.xml
+++ b/android/lib/resource/src/main/res/values-ja/strings.xml
@@ -48,9 +48,9 @@
     <string name="auto_connect_carousel_second_slide_bottom_text">2. 自動接続を有効にするには、[&lt;b&gt;Always-on VPN&lt;/b&gt;] の横のトグルボタンをクリックします。</string>
     <string name="auto_connect_carousel_second_slide_top_text">自動接続はAndroidシステム設定で「Always-on VPN」と呼ばれており、確実に一貫してVPNトンネルに接続し、再起動の後に自動接続を行う機能です。</string>
     <string name="auto_connect_carousel_third_slide_bottom_text">3. ロックダウンモードを有効にするには、&lt;b&gt;VPN を使用していない接続をブロックする&lt;/b&gt;の横にあるトグルボタンをクリックします。&lt;br /&gt;&lt;br /&gt;&lt;b&gt;警告: この設定では、分割アプリとローカルネットワークの共有機能がブロックされます。&lt;/b&gt;</string>
-    <string name="auto_connect_carousel_third_slide_top_text">このロックダウンモードは、Android のシステム設定では &lt;b&gt;VPN を使用していない接続をブロックする&lt;/b&gt;と呼ばれています。情報漏洩の可能性を低減することが可能ですが、既知の制限がいくつかあります。制限については、こちらをご覧ください。</string>
-    <string name="auto_connect_carousel_third_slide_top_text_website_link">こちら</string>
-    <string name="auto_connect_footer_legacy">上の &lt;b&gt;%1$s&lt;/b&gt; のガイドに従い、&lt;b&gt;Always-on&lt;/b&gt; のシステム設定を代わりに使用してください。</string>
+    <string name="auto_connect_carousel_third_slide_top_text">このロックダウンモードは、Androidのシステム設定では [&lt;b&gt;VPNを使用していない接続をブロック&lt;/b&gt;] と呼ばれています。情報漏洩の可能性を低減することが可能ですが、既知の制限がいくつかあります。制限については、</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">こちらをご覧ください。</string>
+    <string name="auto_connect_footer_legacy">上の \"&lt;b&gt;%1$s&lt;/b&gt;\" のガイドに従い、\"&lt;b&gt;Always-on&lt;/b&gt;\" システム設定を代わりに使用してください。</string>
     <string name="auto_connect_footer_legacy_tv">アプリの起動時に自動的に接続します。この設定は、今後のアップデートで新しい \"デバイスの起動時に接続\" 機能に置き換えられます。</string>
     <string name="auto_connect_legacy">自動接続 (レガシー)</string>
     <string name="automatic">自動</string>
@@ -74,7 +74,7 @@
     <string name="confirm_removal">はい。デバイスをログアウトさせます</string>
     <string name="congrats">おめでとうございます！</string>
     <string name="connect">接続を保護する</string>
-    <string name="connected_using_daita">%1$s を使用した %2$s</string>
+    <string name="connected_using_daita">%1$s、%2$sを使用中</string>
     <string name="connecting">接続中</string>
     <string name="connecting_to_daemon">Mullvad システムサービスに接続中...</string>
     <string name="continue_login">ログインを続ける</string>
@@ -84,6 +84,7 @@
     <string name="copy_account_number">アカウント番号のコピー</string>
     <string name="create">作成</string>
     <string name="create_account">アカウントを作成する</string>
+    <string name="create_custom_list_message">\"%1$s\" が作成されました</string>
     <string name="create_new_list">リストの新規作成</string>
     <string name="created_x">作成日: %1$s</string>
     <string name="creating_new_account">アカウントを作成中...</string>
@@ -101,7 +102,9 @@
     <string name="custom_port_dialog_title">WireGuardカスタムポート</string>
     <string name="custom_port_dialog_valid_ranges">有効な範囲: %1$s</string>
     <string name="custom_tunnel_host_resolution_error">カスタムトンネルのホストを解決できません。設定を変更してみてください。</string>
-    <string name="daita_info">%1$s (%2$s) を使用すると、暗号化された VPN トラフィックのパターンを隠すことができるようになります。何者かがあなたの接続を監視している場合に、アクセスしているウェブサイトの特定が大幅に難しくなります。ネットワークノイズを慎重に追加し、ネットワークパケットのサイズをすべて同一に揃えることによって実現しています。</string>
+    <string name="daita_info">%1$s (%2$s) は暗号化されたVPNトラフィックのパターンを隠します。これにより、接続が監視されている場合でもアクセス先のウェブサイトを特定するのを極めて困難にします。ネットワークノイズを入念に追加し、すべてのネットワークパケットを同じサイズにすることによってこれを実現しています。</string>
+    <string name="daita_relay_subset_warning">この機能はすべてのサーバーでご利用いただけるわけではありません。有効にした後に場所の変更が必要となる可能性があります。</string>
+    <string name="daita_warning">注意: これにより、ネットワークトラフィックの総数が増加します。上限のあるデータプランをご利用の場合にはご注意ください。また、ネットワークの速度とバッテリー使用量にも悪影響を及ぼす可能性があります。</string>
     <string name="delete">削除</string>
     <string name="delete_custom_list_confirmation_description">\"%1$s\" を削除しますか？</string>
     <string name="delete_custom_list_message">\"%1$s\" は削除されました</string>
@@ -120,7 +123,7 @@
     <string name="disconnect">接続解除</string>
     <string name="disconnecting">接続解除中</string>
     <string name="dismiss">閉じる</string>
-    <string name="dns_content_blockers_custom_dns_warning">注意: この設定を「&lt;b&gt;カスタムDNSサーバーを使う&lt;/b&gt;」と一緒に使用することはできません。</string>
+    <string name="dns_content_blockers_custom_dns_warning">注意: この設定を [&lt;b&gt;カスタムDNSサーバーを使う&lt;/b&gt;] と一緒に使用することはできません。</string>
     <string name="dns_content_blockers_info">この機能を有効にすると、広告、マルウェア、トラッカーなどの配信が確認されている特定のドメインまたはWebサイトへのデバイスの接続が阻止されます。</string>
     <string name="dns_content_blockers_subtitle">これらの設定を有効にするには、以下で&lt;b&gt;%1$s&lt;/b&gt;を無効にしてください。</string>
     <string name="dns_content_blockers_title">DNSコンテンツブロッカー</string>
@@ -135,7 +138,7 @@
     <string name="edit_method">方法の編集</string>
     <string name="edit_name">名前を編集</string>
     <string name="enable">有効にする</string>
-    <string name="enable_anyway">それでも有効化する</string>
+    <string name="enable_anyway">それでも有効にする</string>
     <string name="enable_custom_dns">カスタムDNSサーバーを使う</string>
     <string name="enable_method">方法を有効化する</string>
     <string name="enter_value_placeholder">MTU を入力</string>
@@ -182,6 +185,7 @@
     <string name="local_network_sharing_info">この機能は、共有、印刷、ストリーミングなどのため、ローカルネットワーク上の他デバイスへのアクセスを許可します。</string>
     <string name="location_added">%1$s (追加済み)</string>
     <string name="location_was_added_to_list">%1$s が \"%2$s\" に追加されました</string>
+    <string name="location_was_removed_from_list">%1$sが \"%2$s\" から削除されました</string>
     <string name="locations">場所</string>
     <string name="locations_were_changed_for">\"%1$s\" の場所が変更されました</string>
     <string name="log_out">ログアウト</string>
@@ -257,6 +261,7 @@
     <string name="redeem">使用する</string>
     <string name="redeem_voucher">バウチャーを使用する</string>
     <string name="remove_button">削除</string>
+    <string name="remove_location_from_list">%1$sを%2$sから削除する</string>
     <string name="rented">レンタルサーバー</string>
     <string name="rented_only">レンタルサーバーのみ</string>
     <string name="report_a_problem">問題を報告する</string>
@@ -264,7 +269,7 @@
     <string name="save">保存</string>
     <string name="search_placeholder">検索...</string>
     <string name="secure_connection">セキュリティ保護された接続</string>
-    <string name="secured">セキュリティ保護されています</string>
+    <string name="secured">セキュリティ保護</string>
     <string name="select_location">場所を選択する</string>
     <string name="select_location_description">接続中、あなたの実際の場所は選択した地域内の非公開かつセキュリティ保護された場所で隠されます。</string>
     <string name="select_location_empty_text_first_row">&lt;b&gt;%1$s&lt;/b&gt;に該当する検索結果はありません。</string>
@@ -308,6 +313,7 @@
     <string name="show_account_number">アカウント番号の表示</string>
     <string name="show_system_apps">システムアプリの表示</string>
     <string name="split_tunneling_description">VPN トンネルを経由せずに、直接インターネットにアクセスするアプリを選択できます。</string>
+    <string name="split_tunneling_description_warning">注意: [VPNを使用していない接続をブロックする] が有効な場合、スプリット対象のアプリはインターネットを使用できません。スプリットトンネリングにはプライバシーのリスクがあることに常に注意してください。</string>
     <string name="start_tunnel_error">トンネル接続を開始できません。問題の報告を送信してください。</string>
     <string name="submit_button">送信</string>
     <string name="switch_location">場所を切り替える</string>
@@ -329,7 +335,7 @@
     <string name="udp_over_tcp_port_info">UDP-over-TCP難読化プロトコルで接続する必要のあるVPNサーバーのTCPポートです。</string>
     <string name="udp_over_tcp_port_title">UDP-over-TCPポート</string>
     <string name="undo">元に戻す</string>
-    <string name="unsecured">セキュリティ保護されていません</string>
+    <string name="unsecured">セキュリティ保護なし</string>
     <string name="unsecured_connection">セキュリティ保護されていない接続</string>
     <string name="unsecured_vpn_permission_error">セキュリティ保護なし (VPN のアクセス許可なし)</string>
     <string name="unsupported_version">未対応のバージョン</string>
@@ -347,6 +353,7 @@
     <string name="view_logs">アプリのログを表示</string>
     <string name="virtual_adapter_problem">仮想アダプタのエラー</string>
     <string name="voucher_already_used">バウチャーコードはすでに使用されています。</string>
+    <string name="voucher_is_account_number">バウチャーコードではなくアカウント番号を入力したようです。有効なアカウントを変更する場合は、先にログアウトしてください。</string>
     <string name="voucher_success_title">バウチャーを正常に使用しました。</string>
     <string name="vpn_permission_denied_error">トンネルを作成中にVPNへのアクセスが拒否されました。もう一度接続してみてください。</string>
     <string name="vpn_permission_error_notification_message">Always-on VPNが別のアプリで有効になっている可能性があります</string>
